# finite-state-machines

./: CMakeLists.txt  README.md
Lab1/: Lab1.c  Lab1.drawio  Lab1.pdf:Zone.Identifier
